--- a/docker/services/frontend/html/workplace.html
+++ b/docker/services/frontend/html/workplace.html
@@ -241,38 +241,38 @@
             color: #e8e8e8;
         }
 
-        /* Setups Grid - Compact */
+        /* Setups Grid - Ultra Compact */
         .setups-grid {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(260px, 1fr));
-            gap: 0.6rem;
+            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+            gap: 0.4rem;
         }
 
         .setup-card {
             background: rgba(255, 255, 255, 0.05);
-            border-radius: 8px;
-            padding: 0.75rem;
+            border-radius: 6px;
+            padding: 0.5rem 0.6rem;
             border: 1px solid rgba(255, 255, 255, 0.08);
             cursor: pointer;
             transition: all 0.2s;
         }
 
         .setup-card:hover {
-            transform: translateY(-2px);
+            transform: translateY(-1px);
             border-color: rgba(16, 185, 129, 0.3);
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
         }
 
         .setup-card.long {
-            border-left: 3px solid #10b981;
+            border-left: 2px solid #10b981;
         }
 
         .setup-card.short {
-            border-left: 3px solid #ef4444;
+            border-left: 2px solid #ef4444;
         }
 
         .setup-card.neutral {
-            border-left: 3px solid #fbbf24;
+            border-left: 2px solid #fbbf24;
         }
 
         .setup-card.market-closed {
@@ -280,14 +280,8 @@
         }
 
         .setup-card.selected {
-            border: 2px solid #64c8ff;
+            border: 1px solid #64c8ff;
             background: rgba(100, 200, 255, 0.1);
-        }
-
-        .setup-card:hover {
-            cursor: pointer;
-            transform: translateY(-2px);
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
         }
 
         /* TradingView Chart Section */
@@ -411,19 +405,19 @@
             display: flex;
             justify-content: space-between;
             align-items: center;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.3rem;
         }
 
         .setup-symbol {
-            font-size: 1rem;
+            font-size: 0.85rem;
             font-weight: 600;
         }
 
         .setup-symbol .market-indicator {
-            font-size: 0.65rem;
-            padding: 0.1rem 0.3rem;
-            border-radius: 3px;
-            margin-left: 0.3rem;
+            font-size: 0.55rem;
+            padding: 0.05rem 0.2rem;
+            border-radius: 2px;
+            margin-left: 0.2rem;
             background: rgba(239, 68, 68, 0.2);
             color: #f87171;
         }
@@ -436,11 +430,11 @@
         .setup-score {
             display: flex;
             align-items: center;
-            gap: 0.3rem;
+            gap: 0.2rem;
         }
 
         .score-value {
-            font-size: 1.1rem;
+            font-size: 0.95rem;
             font-weight: 700;
         }
 
@@ -449,9 +443,9 @@
         .score-value.low { color: #94a3b8; }
 
         .setup-direction {
-            padding: 0.15rem 0.4rem;
-            border-radius: 3px;
-            font-size: 0.65rem;
+            padding: 0.1rem 0.3rem;
+            border-radius: 2px;
+            font-size: 0.55rem;
             font-weight: 600;
             text-transform: uppercase;
         }
@@ -473,16 +467,16 @@
 
         .setup-signals {
             display: flex;
-            gap: 0.25rem;
-            margin-bottom: 0.4rem;
+            gap: 0.15rem;
+            margin-bottom: 0.25rem;
             flex-wrap: wrap;
         }
 
         .signal-tag {
-            padding: 0.1rem 0.35rem;
+            padding: 0.05rem 0.25rem;
             background: rgba(255, 255, 255, 0.05);
-            border-radius: 3px;
-            font-size: 0.65rem;
+            border-radius: 2px;
+            font-size: 0.6rem;
             opacity: 0.5;
         }
 
@@ -495,7 +489,8 @@
         .setup-meta {
             display: flex;
             justify-content: space-between;
-            font-size: 0.7rem;
+            align-items: center;
+            font-size: 0.65rem;
             opacity: 0.6;
         }
 
@@ -723,14 +718,14 @@
             background: rgba(100, 200, 255, 0.15);
             border: 1px solid rgba(100, 200, 255, 0.3);
             color: #64c8ff;
-            padding: 0.2rem 0.4rem;
-            border-radius: 4px;
-            font-size: 0.65rem;
+            padding: 0.1rem 0.3rem;
+            border-radius: 3px;
+            font-size: 0.6rem;
             cursor: pointer;
             transition: all 0.2s;
             display: flex;
             align-items: center;
-            gap: 0.2rem;
+            gap: 0.15rem;
         }
 
         .setup-detail-btn:hover {
@@ -739,8 +734,8 @@
         }
 
         .setup-detail-btn svg {
-            width: 12px;
-            height: 12px;
+            width: 10px;
+            height: 10px;
         }
 
         /* Detail Modal - Grösseres Modal für alle Details */
@@ -992,6 +987,148 @@
             color: #f87171;
         }
 
+        /* Symbol Picker */
+        .symbol-picker {
+            display: flex;
+            flex-direction: column;
+            gap: 0.5rem;
+        }
+
+        .symbol-picker-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .symbol-search {
+            width: 100%;
+            padding: 0.4rem 0.6rem;
+            background: rgba(0, 0, 0, 0.3);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 4px;
+            color: #e8e8e8;
+            font-size: 0.75rem;
+            margin-bottom: 0.4rem;
+        }
+
+        .symbol-search:focus {
+            outline: none;
+            border-color: #64c8ff;
+        }
+
+        .symbol-search::placeholder {
+            color: #64748b;
+        }
+
+        .symbol-categories {
+            display: flex;
+            gap: 0.25rem;
+            flex-wrap: wrap;
+            margin-bottom: 0.4rem;
+        }
+
+        .category-btn {
+            padding: 0.2rem 0.4rem;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 3px;
+            color: #94a3b8;
+            font-size: 0.65rem;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .category-btn:hover {
+            background: rgba(255, 255, 255, 0.1);
+            color: #e8e8e8;
+        }
+
+        .category-btn.active {
+            background: rgba(100, 200, 255, 0.2);
+            border-color: #64c8ff;
+            color: #64c8ff;
+        }
+
+        .symbol-list {
+            max-height: 180px;
+            overflow-y: auto;
+            display: flex;
+            flex-wrap: wrap;
+            gap: 0.25rem;
+        }
+
+        .symbol-list::-webkit-scrollbar {
+            width: 4px;
+        }
+
+        .symbol-list::-webkit-scrollbar-track {
+            background: rgba(0, 0, 0, 0.2);
+            border-radius: 2px;
+        }
+
+        .symbol-list::-webkit-scrollbar-thumb {
+            background: rgba(255, 255, 255, 0.2);
+            border-radius: 2px;
+        }
+
+        .symbol-btn {
+            padding: 0.25rem 0.4rem;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.08);
+            border-radius: 3px;
+            color: #e8e8e8;
+            font-size: 0.7rem;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .symbol-btn:hover {
+            background: rgba(100, 200, 255, 0.15);
+            border-color: rgba(100, 200, 255, 0.3);
+        }
+
+        .symbol-btn.in-watchlist {
+            border-color: rgba(16, 185, 129, 0.3);
+        }
+
+        .symbol-btn.in-watchlist::before {
+            content: '★ ';
+            color: #fbbf24;
+            font-size: 0.6rem;
+        }
+
+        /* Timeframe Selector in Symbol Picker Modal */
+        .timeframe-selector {
+            display: flex;
+            gap: 0.3rem;
+            flex-wrap: wrap;
+            margin-top: 0.75rem;
+            padding-top: 0.75rem;
+            border-top: 1px solid rgba(255, 255, 255, 0.1);
+        }
+
+        .timeframe-btn {
+            padding: 0.3rem 0.5rem;
+            background: rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            border-radius: 4px;
+            color: #94a3b8;
+            font-size: 0.75rem;
+            cursor: pointer;
+            transition: all 0.2s;
+        }
+
+        .timeframe-btn:hover {
+            background: rgba(255, 255, 255, 0.1);
+            color: #e8e8e8;
+        }
+
+        .timeframe-btn.active {
+            background: rgba(100, 200, 255, 0.2);
+            border-color: #64c8ff;
+            color: #64c8ff;
+        }
+
         /* Responsive */
         @media (max-width: 900px) {
             .market-hours {
@@ -1180,6 +1317,24 @@
                         <p><span class="label">Fehler</span><span id="errorCount">-</span></p>
                     </div>
                 </div>
+
+                <!-- Symbol Picker -->
+                <div class="sidebar-card">
+                    <h3>Symbol-Auswahl</h3>
+                    <div class="symbol-picker">
+                        <input type="text" class="symbol-search" id="symbolSearch" placeholder="Symbol suchen..." oninput="filterSymbols()">
+                        <div class="symbol-categories">
+                            <button class="category-btn active" onclick="selectCategory('all')">Alle</button>
+                            <button class="category-btn" onclick="selectCategory('crypto')">Crypto</button>
+                            <button class="category-btn" onclick="selectCategory('forex')">Forex</button>
+                            <button class="category-btn" onclick="selectCategory('stocks')">Aktien</button>
+                            <button class="category-btn" onclick="selectCategory('metals')">Metalle</button>
+                        </div>
+                        <div class="symbol-list" id="symbolList">
+                            <!-- Wird dynamisch gefüllt -->
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
@@ -1243,6 +1398,31 @@
                             <span>LLM-Analyse wird geladen...</span>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Timeframe Selection Modal -->
+    <div class="modal-overlay" id="timeframeModal">
+        <div class="modal" style="max-width: 400px;">
+            <div class="modal-header">
+                <h2 id="timeframeModalTitle">Timeframe wählen</h2>
+                <button class="modal-close" onclick="closeTimeframeModal()">&times;</button>
+            </div>
+            <div class="modal-body">
+                <p style="margin-bottom: 0.75rem; font-size: 0.85rem; opacity: 0.7;">
+                    Wählen Sie einen Timeframe für die Analyse:
+                </p>
+                <div class="timeframe-selector" style="margin-top: 0; padding-top: 0; border-top: none;">
+                    <button class="timeframe-btn" onclick="selectTimeframeAndAnalyze('M1')">M1</button>
+                    <button class="timeframe-btn" onclick="selectTimeframeAndAnalyze('M5')">M5</button>
+                    <button class="timeframe-btn" onclick="selectTimeframeAndAnalyze('M15')">M15</button>
+                    <button class="timeframe-btn" onclick="selectTimeframeAndAnalyze('M30')">M30</button>
+                    <button class="timeframe-btn active" onclick="selectTimeframeAndAnalyze('H1')">H1</button>
+                    <button class="timeframe-btn" onclick="selectTimeframeAndAnalyze('H4')">H4</button>
+                    <button class="timeframe-btn" onclick="selectTimeframeAndAnalyze('D1')">D1</button>
+                    <button class="timeframe-btn" onclick="selectTimeframeAndAnalyze('W1')">W1</button>
                 </div>
             </div>
         </div>
@@ -2459,6 +2639,132 @@
                 .split('_')
                 .map(word => word.charAt(0).toUpperCase() + word.slice(1).toLowerCase())
                 .join(' ');
+        }
+
+        // =============================================
+        // Symbol Picker Funktionen
+        // =============================================
+
+        // Alle verfügbaren Symbole
+        const ALL_SYMBOLS = {
+            crypto: ['BTCUSD', 'ETHUSD', 'XRPUSD', 'SOLUSD', 'ADAUSD', 'DOTUSD', 'LINKUSD', 'BNBUSD', 'AVAXUSD', 'MATICUSD'],
+            forex: ['EURUSD', 'GBPUSD', 'USDJPY', 'USDCHF', 'AUDUSD', 'USDCAD', 'NZDUSD', 'EURGBP', 'EURJPY', 'GBPJPY', 'EURCHF', 'AUDCAD'],
+            stocks: ['AAPL', 'MSFT', 'GOOGL', 'AMZN', 'NVDA', 'TSLA', 'META', 'US500', 'US100', 'US30', 'DE40', 'UK100', 'FR40', 'EU50', 'JP225'],
+            metals: ['XAUUSD', 'XAGUSD']
+        };
+
+        let currentPickerCategory = 'all';
+        let selectedPickerSymbol = null;
+        let watchlistSymbols = [];
+
+        // Symbol-Liste initialisieren
+        document.addEventListener('DOMContentLoaded', () => {
+            renderSymbolList();
+            // Watchlist-Symbole für Markierung laden
+            loadWatchlistSymbols();
+        });
+
+        async function loadWatchlistSymbols() {
+            try {
+                const response = await fetch(`${API_BASE}/watchlist/`);
+                const data = await response.json();
+                watchlistSymbols = (data.items || []).map(item => item.symbol);
+                renderSymbolList(); // Neu rendern mit Markierungen
+            } catch (error) {
+                console.error('Fehler beim Laden der Watchlist-Symbole:', error);
+            }
+        }
+
+        function selectCategory(category) {
+            currentPickerCategory = category;
+
+            // Button-Status aktualisieren
+            document.querySelectorAll('.category-btn').forEach(btn => {
+                btn.classList.remove('active');
+                if (btn.textContent.toLowerCase().includes(category) ||
+                    (category === 'all' && btn.textContent === 'Alle') ||
+                    (category === 'stocks' && btn.textContent === 'Aktien')) {
+                    btn.classList.add('active');
+                }
+            });
+
+            renderSymbolList();
+        }
+
+        function filterSymbols() {
+            renderSymbolList();
+        }
+
+        function renderSymbolList() {
+            const container = document.getElementById('symbolList');
+            const searchTerm = document.getElementById('symbolSearch').value.toUpperCase();
+
+            let symbols = [];
+
+            if (currentPickerCategory === 'all') {
+                symbols = [...ALL_SYMBOLS.crypto, ...ALL_SYMBOLS.forex, ...ALL_SYMBOLS.stocks, ...ALL_SYMBOLS.metals];
+            } else {
+                symbols = ALL_SYMBOLS[currentPickerCategory] || [];
+            }
+
+            // Filtern nach Suchbegriff
+            if (searchTerm) {
+                symbols = symbols.filter(s => s.includes(searchTerm));
+            }
+
+            // Sortieren: Watchlist-Symbole zuerst
+            symbols.sort((a, b) => {
+                const aInWatchlist = watchlistSymbols.includes(a);
+                const bInWatchlist = watchlistSymbols.includes(b);
+                if (aInWatchlist && !bInWatchlist) return -1;
+                if (!aInWatchlist && bInWatchlist) return 1;
+                return a.localeCompare(b);
+            });
+
+            container.innerHTML = symbols.map(symbol => {
+                const inWatchlist = watchlistSymbols.includes(symbol);
+                return `<button class="symbol-btn ${inWatchlist ? 'in-watchlist' : ''}"
+                                onclick="openSymbolTimeframeModal('${symbol}')"
+                                title="${symbol}${inWatchlist ? ' (in Watchlist)' : ''}">${symbol}</button>`;
+            }).join('');
+        }
+
+        // Timeframe Modal für Symbol-Auswahl
+        function openSymbolTimeframeModal(symbol) {
+            selectedPickerSymbol = symbol;
+            document.getElementById('timeframeModalTitle').textContent = `${symbol} - Timeframe wählen`;
+            document.getElementById('timeframeModal').classList.add('active');
+        }
+
+        function closeTimeframeModal() {
+            document.getElementById('timeframeModal').classList.remove('active');
+            selectedPickerSymbol = null;
+        }
+
+        document.getElementById('timeframeModal').addEventListener('click', (e) => {
+            if (e.target.classList.contains('modal-overlay')) closeTimeframeModal();
+        });
+
+        function selectTimeframeAndAnalyze(timeframe) {
+            if (!selectedPickerSymbol) return;
+
+            // Timeframe-Modal schliessen
+            closeTimeframeModal();
+
+            // Detail-Modal öffnen
+            openDetailModal(selectedPickerSymbol, timeframe);
+
+            // Auch Chart laden
+            loadChart(selectedPickerSymbol);
+
+            // Timeframe im Chart-Dropdown setzen
+            const intervalMap = {
+                'M1': '1', 'M5': '5', 'M15': '15', 'M30': '30',
+                'H1': '60', 'H4': '240', 'D1': 'D', 'W1': 'W'
+            };
+            if (intervalMap[timeframe]) {
+                document.getElementById('chartInterval').value = intervalMap[timeframe];
+            }
         }
     </script>
 </body>
